--- a/config.json
+++ b/config.json
@@ -3,5 +3,8 @@
   "TC": 4,
   "BD_NUM": 250,
   "PATTERN_TYPE": "pixel",
-  "PERTURBATION_SIZE": 0.3
+  "PERTURBATION_SIZE": 0.3,
+  "MASK_SIZE": 3,
+  "MARGIN": 3,
+  "PATCH_TYPE": "noise"
 }
